# agentic-ai-engineering-course

./: .env.example  .gitignore  .mcp.json  LICENSE  README.md  README_PACKAGE.md  pyproject.toml
lessons/research_agent_part_2/mcp_client/: .env.example  .gitignore  README.md  pyproject.toml
lessons/research_agent_part_2/mcp_client/src/: client.py  settings.py
lessons/research_agent_part_2/mcp_client/src/utils/: __init__.py  command_utils.py  handle_agent_loop_utils.py  handle_message_utils.py  llm_utils.py  logging_utils.py  mcp_startup_utils.py  opik_handler.py  parse_message_utils.py  print_utils.py  types.py
lessons/writing_workflow/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
lessons/writing_workflow/configs/: course-gemini-flash.yaml  course.yaml  debug.yaml  decodingai.yaml
lessons/writing_workflow/inputs/evals/dataset/: metadata.json
lessons/writing_workflow/inputs/evals/dataset/data/02_workflows_vs_agents/: article_ground_truth.md  research.md
lessons/writing_workflow/inputs/evals/dataset/data/03_context_engineering/: article_ground_truth.md  research.md
lessons/writing_workflow/inputs/evals/dataset/data/04_structured_outputs/: article_generated.md  article_ground_truth.md
lessons/writing_workflow/inputs/evals/dataset/data/05_workflow_patterns/: article_ground_truth.md  article_guideline.md
lessons/writing_workflow/inputs/evals/dataset/data/06_tools/: article_ground_truth.md
lessons/writing_workflow/inputs/evals/dataset/data/07_reasoning_planning/: article_generated.md  article_ground_truth.md  article_guideline.md
lessons/writing_workflow/inputs/evals/dataset/data/08_react_practice/: article_ground_truth.md  article_guideline.md  research.md
lessons/writing_workflow/inputs/evals/dataset/data/09_RAG/: article_ground_truth.md  article_guideline.md  research.md
lessons/writing_workflow/inputs/evals/dataset/data/10_memory_knowledge_access/: article_guideline.md
lessons/writing_workflow/inputs/evals/dataset/data/11_multimodal/: article_ground_truth.md  article_guideline.md  research.md
lessons/writing_workflow/inputs/examples/course_lessons/: agentic_ai_engineering_03_context_engineering.md  agentic_ai_engineering_04_structured_outputs.md
lessons/writing_workflow/inputs/examples/debug/: ai_agents_foundations_02_structured_outputs.md
lessons/writing_workflow/inputs/examples/decodingai_articles/: ai_agents_foundations_01_workflows_vs_agents.md  ai_agents_foundations_02_structured_outputs.md  ai_agents_foundations_03_workflow_patterns.md
lessons/writing_workflow/inputs/profiles/: article_profile.md  mechanics_profile.md  structure_profile.md  terminology_profile.md  tonality_profile.md
lessons/writing_workflow/inputs/profiles/character_profiles/: paul_iusztin.md
lessons/writing_workflow/inputs/tests/00_debug/: article.md  article_000.md  article_001.md  article_guideline.md  research.md
lessons/writing_workflow/inputs/tests/01_sample/: article_guideline.md  research.md
lessons/writing_workflow/inputs/tests/01_sample_small/: article.md  article_guideline.md  research.md
lessons/writing_workflow/inputs/tests/02_sample_medium/: article.md  article_guideline.md  research.md
lessons/writing_workflow/inputs/tests/02_workflows_vs_agents/: article_000.md  article_001.md  article_002.md  article_guideline.md  research.md  reviewed_article.md  reviews.md
lessons/writing_workflow/inputs/tests/03_sample_large/: article_guideline.md
lessons/writing_workflow/inputs/tests/06_tools/: article.md  article_000.md  article_001.md  article_002.md  research.md
lessons/writing_workflow/scripts/: brown_create_eval_dataset.py  brown_mcp_cli.py  brown_run_eval.py
lessons/writing_workflow/src/brown/: __init__.py  base.py  builders.py  config.py  config_app.py  loaders.py  renderers.py
lessons/writing_workflow/src/brown/entities/: __init__.py  articles.py  exceptions.py  guidelines.py  media_items.py  mixins.py  profiles.py  research.py  reviews.py
lessons/writing_workflow/src/brown/evals/: __init__.py  constants.py  dataset.py  tasks.py
lessons/writing_workflow/src/brown/evals/metrics/: __init__.py  base.py
lessons/writing_workflow/src/brown/evals/metrics/follows_gt/: __init__.py  metric.py  prompts.py  (+1 more)
lessons/writing_workflow/src/brown/mcp/: __init__.py  server.py
lessons/writing_workflow/src/brown/memory/: __init__.py
lessons/writing_workflow/src/brown/models/: __init__.py  config.py  exceptions.py  fake_model.py  get_model.py
lessons/writing_workflow/src/brown/nodes/: __init__.py  article_reviewer.py  article_writer.py  base.py  media_generator.py  tool_nodes.py
lessons/writing_workflow/src/brown/observability/: __init__.py  dataset.py  evaluation.py  opik_utils.py  tracing.py
lessons/writing_workflow/src/brown/utils/: __init__.py  a.py  network.py  s.py
lessons/writing_workflow/src/brown/workflows/: __init__.py  edit_article.py  edit_selected_text.py  generate_article.py  types.py
lessons/writing_workflow/tests/: conftest.py
lessons/writing_workflow/tests/brown/: __init__.py  conftest.py
lessons/writing_workflow/tests/brown/data/: test_loaders.py  test_renderers.py
lessons/writing_workflow/tests/brown/domain/: __init__.py  test_articles.py  test_guidelines.py  test_media_items.py  test_mixins.py  test_profiles.py  test_research.py  test_reviews.py
lessons/writing_workflow/tests/brown/evals/: test_dataset.py  test_tasks.py
lessons/writing_workflow/tests/brown/nodes/: __init__.py  test_article_reviewer.py  test_article_writer.py  test_base.py  test_media_generator.py
lessons/writing_workflow/tests/brown/utils/: test_a.py  test_network.py  test_s.py
lessons/writing_workflow/tests/fixtures/articles/: completely_structured.md  completely_structured_with_title.md  malformed_section_title.md  no_introduction_title.md
lessons/writing_workflow/tests/fixtures/configs/: mocked.yaml
lessons/writing_workflow/tests/fixtures/guidelines/: basic_guideline.md  structured_guideline.md
lessons/writing_workflow/tests/fixtures/research/: basic_research.md  complex_research.md
(+333 files in other folders)
