[project]
name = "lessons"
version = "0.0.1"
description = "The lessons of the AI Engineering course."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.21.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.7",
    "langgraph>=0.5.3",
    "matplotlib>=3.10.3",
    "notebook>=7.4.5",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lessons"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "F",    # Pyflakes
    "E",    # pycodestyle errors
    "I",    # isort
]

[tool.ruff.lint.isort]
known-first-party = ["lessons"]
